// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "src/main/proto/wfa/measurement/internal/kingdom/requisition_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message Requisition {
  fixed64 external_data_provider_id = 1;
  fixed64 external_campaign_id = 2;
  fixed64 external_requisition_id = 3;

  // See `provided_campaign_id` in the Campaign message.
  string provided_campaign_id = 11;

  google.protobuf.Timestamp create_time = 4;

  google.protobuf.Timestamp window_start_time = 5;
  google.protobuf.Timestamp window_end_time = 6;

  RequisitionState state = 7;
  string duchy_id = 10;

  RequisitionDetails requisition_details = 8;
  string requisition_details_json = 9;

  // ID of the CombinedPublicKey resource for the encryption key used to encrypt
  // the metric value.
  string combined_public_key_resource_id = 12;

  enum RequisitionState {
    REQUISITION_STATE_UNKNOWN = 0;

    // Initial state of a Requisition. This means that the Requisition is
    // created but there is no guarantee that the data requested in the
    // Requisition has been computed or is available.
    UNFULFILLED = 1;

    // Data for the Requisition has been computed and is ready to be used in
    // computations.
    FULFILLED = 2;

    // A Data Provider has indicated that the data for the Requisition cannot be
    // computed. This is a terminal state; any Reports using this Requisition
    // will be placed in a permanent failure state as well.
    PERMANENTLY_UNAVAILABLE = 3;
  }
}
